# knxboard

./: .gitignore  .gitmodules  KnxBoard-cache.lib  KnxBoard.kicad_pcb  KnxBoard.pro  KnxBoard.sch  MCU.sch  Roadmap.txt  fp-lib-table  stknx.sch  sym-lib-table
Libraries/: stknx.lib
Libraries/stknx.pretty/: KNX_Connector.kicad_mod
firmware/: CMakeLists.txt  Makefile  README.md  gdb.sh  main.c
firmware/Core/: KNXBOARDV1.mk  KNXBOARDV4.cfg  KNXBOARDV4.mk  NUCLEOL432.cfg  NUCLEOL432.mk
firmware/Core/KNXBOARDV1/: .cproject  .mxproject  .project  Makefile  mcu-core.ioc
firmware/Core/KNXBOARDV1/Core/Inc/: main.h  stm32l4xx_it.h
firmware/Core/KNXBOARDV1/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
firmware/Core/KNXBOARDV4/: .mxproject  Makefile  STM32G491KEUx_FLASH.ld  mcu-core.ioc
firmware/Core/KNXBOARDV4/Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
firmware/Core/KNXBOARDV4/Core/Src/: gpio.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c  usart.c
firmware/Core/NUCLEOL432/: .mxproject  Makefile  mcu-core.ioc
firmware/Core/NUCLEOL432/Core/Inc/: main.h  stm32l4xx_it.h
firmware/Core/NUCLEOL432/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
firmware/Core/STM32G491KE-KNXBOARDV4/: .mxproject  mcu-core.ioc
firmware/Core/STM32G491KE-KNXBOARDV4/Core/Inc/: main.h
firmware/Core/STM32L432KC-KNXBOARDV1/: Makefile
firmware/Core/STM32L432KC-KNXBOARDV1/Core/Inc/: main.h  stm32l4xx_hal_conf.h
firmware/Core/STM32L432KC-KNXBOARDV1/Core/Src/: gpio.c  main.c  stm32l4xx_it.c  tim.c  usart.c
firmware/Core/STM32L432KC-NUCLEO/: .mxproject
firmware/Core/STM32L432KC-NUCLEO/Core/Inc/: stm32l4xx_it.h
firmware/Core/STM32L432KC-NUCLEO/Core/Src/: stm32l4xx_hal_msp.c
firmware/KnxBoard/: KnxBoard.ioc
firmware/Scripts/: STM32G491.ld  STM32G491.mk  STM32L432.ld  STM32L432.mk
firmware/libknx/: console.c  console.h  debug.h  knx_stack.c  layer1_physical.h  layer2_data_link.c  layer3_network.c  layer4_transport.c  object_device.c
firmware/libknx/NCN5130/: NCN5130.c  NCN5130.h  layer1_physical.c
firmware/libknx/STKNX/: layer1_physical.c
firmware/mcu-core/: mcu-core.ioc
hardware/: BOM.ods  KNX_NCN5130.dcm  KNX_NCN5130.lib  KnxBoard-cache.lib  KnxBoard-rescue.lib  KnxBoard.kicad_pcb  KnxBoard.kicad_prl  KnxBoard.kicad_pro  KnxBoard.kicad_sch  KnxBoard.net  KnxBoard.pro  KnxBoard.sch  MCU.sch  fp-info-cache  fp-lib-table  knxncn.kicad_sch  mcu.kicad_sch  stknx.sch  sym-lib-table
hardware/KnxBoard.lib/: EDK107M035A9HAA.lib  NCN5130.lib  STM32G491KEU6.lib  STM32U575CIT6.lib  STM32U575CIU6Q.lib
hardware/KnxBoard.pretty/: CAPAE660X800N.kicad_mod  KNX_Connector.kicad_mod  NCN5130.kicad_mod  NCN5130.stp  STM32G491KEU6.kicad_mod  STM32U575CIT6.kicad_mod  STM32U575CIU6Q.kicad_mod  skqgabe010.stp
hardware/SeeedStudio/: BOM.xls  KnxBoard-B_Cu.gbr  KnxBoard-B_Mask.gbr  KnxBoard-B_Silkscreen.gbr  KnxBoard-Edge_Cuts.gbr  KnxBoard-F_Cu.gbr  KnxBoard-F_Mask.gbr  KnxBoard-F_Silkscreen.gbr  KnxBoard-NPTH.drl  KnxBoard-PTH.drl  KnxBoard-job.gbrjob
